--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-   <h1>Interactive Media</h1> 
+   <h1 style="color:red"> Interactive Media </h1>
    <h2>Leah Li</h2>
    <h3>email: leah1ee@outlook.com</h3>
    <ul>
