--- a/week2/about.html
+++ b/week2/about.html
@@ -3,12 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>about </title>
 </head>
 <body>
-    <h1>Learning html</h1>
-    <a href="about.html"> go to about</a>
-    <img src="攀岩印花.png" alt="" width="300"hight="300">
-
+    this is moew moew 
 </body>
 </html>
